# libna

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  libna.cu
cmake/: CompilerOptions.cmake  MSVCFilter.cmake  TorchFix.cmake  libna.cmake  matlab-config.cmake  tensorflow-config.cmake
cmake/misc/: CompilerOptions.cmake  MSVCFilter.cmake  TorchFix.cmake  tensorflow-config.cmake
cmake/modules/: FindMOSEK.cmake
cmake/na/: na_include.cmake
cmake/na/modules/: core.cmake  core_test.cmake  cuda.cmake  mosek.cmake
include/na/: adaptive_levin.h  adaptive_simpson.h  bessel.h  bspline.h  chebyshev.h  legendre.h  macros.h  runge_kutta.h
include/na/core/: array.h  matrix.h  misc.h  sparse.h  string.h  vector.h
include/na/geometry/: frame_mapping.h  quaternion.h  transformation.h
include/na/graphics/: cot_laplacian.h  cotan_laplacian.h  cotangent_laplacian.h  grad.h  massmatrix.h
include/na/integrate/: adaptive_levin.h  adaptive_simpson.h  dopri5.h  double_integral.h  runge_kutta.h
include/na/io/: matlab.h  mtx.h
include/na/linalg/: colleague_matrix.h  hessenberg.h  qr.h  repdiag.h  sparse.h  vector.h
include/na/matlab/: adaptor.h  commands.h  core.h
include/na/mkl/: distributions.h
include/na/special/: bessel.h  chebyshev.h  gamma.h  legendre.h
include/na/spline/: bsp_degelevate.h  bsp_evaluate.h  bsp_kntrefine.h  bsp_refine.h  bzr_evaluate.h  find_span.h  knot_uniform.h  nrb_circ.h  nrb_decompose.h  nrb_degelevate.h  nrb_entity.h  nrb_evaluate.h  nrb_kntrefine.h  nrb_kntremove.h  nrb_line.h  nrb_refine.h  nrb_tessellate.h  nrb_testcrv.h  nrb_testsrf.h  nrb_unclamp.h
include/na/type_traits/: class_of.h  floating_point_scalar.h  function_traits.h  is_array_or_matrix.h  is_array_xpr.h  is_complex.h  is_dense_xpr.h  is_detected.h  is_float_or_complex.h  is_floating_point_or_complex.h  is_matrix_xpr.h  is_pointer_like.h  matlab_traits.h  nonesuch.h
include/na/utils/: matrixio.h
src/na/: adaptive_levin.cpp  bessel.cpp  bspline.cpp  chebyshev.cpp  legendre.cpp  runge_kutta.cpp
src/na/core/: matrix.cpp
src/na/geometry/: frame_mapping.cpp
src/na/integrate/: adaptive_levin.cpp  dopri5.cpp  runge_kutta.cpp
src/na/linalg/: colleague_matrix.cpp  hessenberg.cpp  qr.cpp  vector.cpp
src/na/matlab/: core.cpp
src/na/special/: bessel.cpp  chebyshev.cpp  gamma.cpp  legendre.cpp
src/na/spline/: bsp_degelevate.cpp  bsp_evaluate.cpp  bsp_kntrefine.cpp  bsp_refine.cpp  bzr_evaluate.cpp  find_span.cpp  knot_uniform.cpp  nrb_circ.cpp  nrb_decompose.cpp  nrb_degelevate.cpp  nrb_entity.cpp  nrb_evaluate.cpp  nrb_kntrefine.cpp  nrb_kntremove.cpp  nrb_line.cpp  nrb_refine.cpp  nrb_tessellate.cpp  nrb_testcrv.cpp  nrb_testsrf.cpp  nrb_unclamp.cpp
tests/: test_type_traits.cpp
